[package]
name = "chat-project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1" }
lazy_static = "1.4"
regex = "1.10"
env_logger = "0.10"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
